# c-simd-rng-lib

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Development_Roadmap.md  File-Structure.md  INSTALLATION.md  LICENSE.md  ReadMe.md  SECURITY.md  hn.md
.github/: FUNDING.yml
v1.5/Benchmarking/: BENCHMARK.md  CMakeLists.txt  benchmark_analyzer.py  benchmark_file_renamer.bat  benchmark_results.txt  benchmarking_plus_analysis.bat  bit_width_test.cpp  bitwidth_benchmark.cpp  enhanced_benchmark.cpp  enhanced_bitwidth_benchmark.cpp  pip+install+-r+requirements.txt  rng_benchmark_summary.csv  run_benchmarks.bat  simple_benchmark.cpp  universal_bench.cpp
v1.5/Benchmarking/benchmark_results/: manual_benchmark_script.bat
v1.5/Benchmarking/formatted_results/: benchmark_1024bit_1.txt  benchmark_1024bit_10.txt  benchmark_1024bit_11.txt  benchmark_1024bit_2.txt  benchmark_1024bit_3.txt  benchmark_1024bit_4.txt  benchmark_1024bit_5.txt  benchmark_1024bit_6.txt  benchmark_1024bit_7.txt  benchmark_1024bit_8.txt  benchmark_1024bit_9.txt  benchmark_128bit_1.txt  benchmark_128bit_10.txt  benchmark_128bit_11.txt  benchmark_128bit_2.txt  benchmark_128bit_3.txt  benchmark_128bit_4.txt  benchmark_128bit_5.txt  benchmark_128bit_6.txt  benchmark_128bit_7.txt  benchmark_128bit_8.txt  benchmark_128bit_9.txt  benchmark_16bit_1.txt  benchmark_16bit_10.txt  benchmark_16bit_11.txt  benchmark_16bit_2.txt  benchmark_16bit_3.txt  benchmark_16bit_4.txt  benchmark_16bit_5.txt  benchmark_16bit_6.txt  benchmark_16bit_7.txt  benchmark_16bit_8.txt  benchmark_16bit_9.txt  benchmark_256bit_1.txt  benchmark_256bit_10.txt  benchmark_256bit_11.txt  benchmark_256bit_2.txt  benchmark_256bit_3.txt  benchmark_256bit_4.txt  benchmark_256bit_5.txt  (+37 more)
v1.5/docs/: temp.txt
v1.5/docs/docs/: README.md  avx-512_optimizations_done.md  c++_rng_-_original_idea.md  desired-for-future.md  explain_of_3-7's_refactor.md  further-todo_avx2-optimizations.md  further-todo_general-optimizations.md  key_SIMD-implementation_design-principles.md  long-term_todos.md  opencl-implementation-details.md  readme-summary.md  why_api_and_main_stub_are_so_-_compiler_issues.md
v1.5/docs/docs/c+[old]/: expecc_modular_output.md  main_project_overview.md  note_to_n_from_aii.md  odl_overview.md  old_instruct.md  original_instructions_for_early_version.md  pre_refactor_code_breakdown.md  readme_for_old_rng.md
v1.5/docs/docs/rs/: rust_results.md
v1.5/docs/docs/rs/criterion+[rs]/report/: index.html
v1.5/docs/docs/rs/criterion+[rs]/rng128/base/: benchmark.json  raw.csv  tukey.json
v1.5/docs/docs/rs/criterion+[rs]/rng128/change/: estimates.json
v1.5/docs/docs/rs/criterion+[rs]/rng128/new/: estimates.json  sample.json
v1.5/docs/docs/rs/criterion+[rs]/rng128/report/: index.html
v1.5/docs/docs/rs/criterion+[rs]/smallrng/base/: benchmark.json  estimates.json  tukey.json
v1.5/docs/docs/rs/criterion+[rs]/smallrng/change/: estimates.json
v1.5/docs/docs/rs/criterion+[rs]/smallrng/new/: raw.csv  sample.json
v1.5/docs/docs/rs/criterion+[rs]/smallrng/report/: index.html
v1.5/docs/docs/rs/criterion+[rs]/stdrng/base/: benchmark.json  estimates.json  raw.csv  sample.json  tukey.json
v1.5/docs/docs/rs/criterion+[rs]/stdrng/change/: estimates.json
v1.5/docs/docs/rs/criterion+[rs]/stdrng/report/: index.html
v1.5/lib_files/: usage.md
v1.5/non-core-files/: CMakeLists.bth  CMakeLists.lnx  CMakeLists.stc  CMakeLists.txt  CMakeLists.win
v1.5/non-core-files/include/: rng_common.h  universal_rng.h
v1.5/non-core-files/tests/: test_rng.cpp
v1.5/src/: `c++.code-workspace
v1.5/src/non-core-files/: universal_rng.def
v1.5/src/non-core-files/extras/windows/: env_mingw64.bat
v1.5/src/non-core-files/include/: avx2_impl.h  avx512_impl.h  cpu_detect.h  gpu_optimization_detection.h  opencl_rng_integration.h  opencl_rng_kernels.h  rng_core.h  runtime_detect.h  scalar_impl.h  sse2_impl.h  universal_rng.hnew.h  universal_rng.old
v1.5/src/non-core-files/src/: cpu_detect.cpp  opencl_isi.cpp  runtime_detect.cpp  simd_avx512.cpp  universal_rng.cpp  universal_rng_bitwidth.cpp  universal_rng_scalar.cpp
v1.5/src/non-core-files/tests/: CMakeLists.txt
v1.6/: CMakeLists.txt  g-petey_convo_refactor.md
v1.6/bench/: bench_lock_and_bench.cpp  bench_main.cpp
v1.6/include/: avx_impl.h  rng_common.h  rng_distributions.h  rng_includes.h  runtime_detect.h  simd_exp.h  simd_normal.h  universal_rng.h  universal_rng_export.h  universal_rng_types.h  wyrand_impl.h  xoroshiro_impl.h
v1.6/src/: philox4x32_scalar.cpp  rng_distributions.cpp  runtime_detect.cpp  simd_avx2.cpp  simd_avx2_philox4x32.cpp  simd_avx2_xoshiro256ss.cpp  simd_avx512_philox4x32.cpp  simd_avx512_xoshiro256ss.cpp  simd_neon_philox4x32.cpp  simd_normal_avx2.cpp  simd_normal_avx512.cpp  simd_normal_neon.cpp  simd_sse2.cpp  universal_rng.cpp  universal_rng_api.cpp  xoshiro256ss_scalar.cpp
v1.7/: README.md
